# tsn-gen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE.md  README.md  exec-local-test.sh  main.cpp  setup.sh
.github/workflows/: behave-testing.yml  tests.yml  unit-testing.yml
cmake/: CMakeGenTestingLibraries.cmake  CMakeGoogleDiscoverAllTests.cmake  CMakeLinkToTestlibs.cmake  tsn-genConfig.cmake.in
docs/: 00_introduction.md  01_testing.md  01_testing.rst  02_protocol_parser.md  03_protocol_yaml_reference.md  04_traffic_generator.md  05_architecture.md  INDEX.md
docs/design/: 1722_1_adp.drawio
docs/high-level/: overview.md
docs/low-level/: architecture.md  logic-modules.md  testing-and-ci.md
docs/man/: packet_gen.1
docs/mid-level/: embedding-the-library.md  using-the-cli.md  writing-protocols.md
docs/schema/: protocol.schema.json  stack.schema.json
framers/: README.md
gui/: README.md
interfaces/: README.md
interfaces/hdl/axi-stream/: frame-axi-stream-nbit.svh
logic/: CMakeLists.txt  README.md
logic/inc/: ethernet_frame_logic.h
logic/inc/tsn/: aecp_aem_logic.h  avtp_control_logic.h  ethernet_frame_logic.h
logic/src/: aecp_aem_logic.cpp  avtp_control_logic.cpp  ethernet_frame_logic.cpp
logic/tests/: CMakeLists.txt  ethernet_frame_logic_test.cpp  stack_codec_test.cpp  validate_with_tshark.sh
logic/tests/test_resources/ethernet_logic_test/protocols/: mac_frame.yaml
logic/tests/test_resources/ethernet_logic_test/stacks/: ethernet_bypassed.yaml  ethernet_only.yaml
netcode/framers/: README.md
netcode/physical/: mii.yaml  rs.yaml
netcode/protocols/: README.md
parser/: CMakeLists.txt  README.md
parser/docs/: HierachyStructure.plantuml  HierarchyCreation.plantuml  Protocol.plantuml  ProtocolCreation.plantuml
parser/inc/: database.cpp  database.h  entity.h  error.h  layer_context.h  leaf.h  logic_module.h  logic_registry.h  node-visitor.hpp  node.h  parser_strategy.h  protocol-node.h  protocol-parser.h  protocol.h  protocol_interface.h  protocol_node.h  protocol_parser.h  serializer.h  serializer_protocol.h  serializer_visitor-impl.h  serializer_visitor.h  service.h  stack.h  stack_builder.h  tree.h  utils.h  var-creator.h  var.h  var_type.h  version.h
parser/inc/tsn/: database.cpp  database.h  entity.h  error.h  layer_context.h  log.h  logic_module.h  logic_registry.h  protocol.h  protocol_interface.h  protocol_parser.h  service.h  stack.h  stack_builder.h  utils.h  validator.h  var.h  version.h
parser/src/: db_proto_if_impl.cpp  db_proto_impl.cpp  db_proto_service_impl.cpp  db_var_impl.cpp  hierarchy.cpp  log.cpp  logic_registry.cpp  protocol-parser.cpp  protocol.cpp  protocol_parser.cpp  rootnode.cpp  stack.cpp  stack_builder.cpp  tree.cpp  validator.cpp
parser/tests/: CMakeLists.txt  gtest.cpp  logic_registry_test.cpp  object_serializer_test.cpp  parser_common_test.h  prep-tests.sh  protocol-parser-test.cpp  protocol_parser_test.cpp  stack_builder_test.cpp  validator_test.cpp
parser/tests/test_resources/0001_yaml_but_not_a_protocol_description/: invalid_yaml.yaml
parser/tests/test_resources/0003_diverging_path/: prep-test.sh
parser/tests/test_resources/0004_invalid_protocol_name/: invalid_proto_name.yaml
parser/tests/test_resources/0010_simple_protocol_test/: 1722_1_adp.yaml  simple.yaml
parser/tests/test_resources/0020_adp_protocol_test/: adp.yaml
parser/tests/test_resources/0030_protocol_with_logic/: with_logic.yaml
parser/tests/test_resources/0040_stack_test/protocols/: simple.yaml  with_unknown_logic.yaml
parser/tests/test_resources/0040_stack_test/stacks/: bypass_logic.yaml  bypass_unknown_logic.yaml  passthrough.yaml  unknown_logic.yaml  unknown_service.yaml  with_logic.yaml
parser/tests/test_resources/0050_validator/: bad_dir.yaml  bad_empty_service.yaml  bad_foreign_key.yaml  bad_no_service.yaml  bad_size.yaml  good.yaml
proto-builder/: CMakeLists.txt
proto-builder/inc/: entity.h  leaf.h
protocols/: common.proto
protocols/physical/: README.md  gmii.yaml  mii.yaml  pcs.yaml  rs.yaml
sim/: CMakeLists.txt  README.md  sc_main.cpp
sim/inc/: axis_bridge.h  verilator_net_device.h
sim/src/: axis_bridge.cpp  verilator_net_device.cpp
stacks/: aecp_acquire_entity.yaml
tests/: exec-local-test.sh  install-pre-commit-hook.sh  run-tests-behave.sh  run-tests-on-changes.sh  run-tests.sh
tests/features/: protocol_parser.feature
traffic-gen/: CMakeLists.txt  README.md
traffic-gen/inc/: axi_stream_beat.h  packet_builder.h  packet_decoder.h  pcap_receiver.h  pcap_sender.h  raw_socket_receiver.h  raw_socket_sender.h  receiver.h  sender.h  traffic_generator.h  verilator_receiver.h  verilator_sender.h
traffic-gen/inc/tsn/: axi_stream_beat.h  packet_builder.h  packet_decoder.h  pcap_receiver.h  pcap_sender.h  raw_socket_receiver.h  raw_socket_sender.h  receiver.h  sender.h  session.h  traffic_generator.h  verilator_receiver.h  verilator_sender.h
traffic-gen/src/: packet_builder.cpp  packet_decoder.cpp  pcap_receiver.cpp  pcap_sender.cpp  raw_socket_receiver.cpp  raw_socket_sender.cpp  session.cpp  traffic_generator.cpp  verilator_receiver.cpp  verilator_sender.cpp
traffic-gen/tests/: CMakeLists.txt  adp_fuzz_test.cpp  traffic_gen_common.h  traffic_gen_test.cpp
traffic-gen/tests/aecp_behave/: environment.py
traffic-gen/tests/aecp_behave/features/: aecp_acquire_lock_entity.feature  aecp_audio_mapping.feature  aecp_descriptor_ops.feature  aecp_name_control.feature  aecp_non_aem.feature  aecp_operations.feature  aecp_stream_ops.feature  environment.py  layer_stack.feature
traffic-gen/tests/aecp_behave/features/steps/: packet_steps.py
traffic-gen/tests/stack_behave/features/: adp_stack.feature  aecp_aem_stack.feature  aecp_non_aem_stack.feature  dut_decode.feature  environment.py
traffic-gen/tests/stack_behave/features/steps/: stack_steps.py
traffic-gen/tools/: packet_gen_main.cpp
traffic_gen/: CMakeLists.txt  README.md
traffic_gen/inc/: traffic_gen.h  version.h
traffic_gen/src/: traffic_gen.cpp
traffic_gen/tests/: CMakeLists.txt  gtest.cpp  traffic_gen_common.h  traffic_gen_test.cpp
(+48 files in other folders)
